# operationMonitoring

./: .env.example  .gitignore  AGENTS.md  README.md  deploy.sh  docker-compose.with-db.yml  docker-compose.yml  执行计划.md  需求.md
backend/: .dockerignore  Cargo.toml  Dockerfile  README.md  operation-monitoring.db  operation-monitoring.db-shm  operation-monitoring.db-wal
backend/src/: admin_auth.rs  auth.rs  config.rs  db.rs  error.rs  files.rs  jobs.rs  main.rs  models.rs  remote_desktop.rs  state.rs  updates.rs  utils.rs  ws.rs
backend/src/handlers/: mod.rs
docs/: deployment.md  instance-agent-packaging.md
front-end/: .dockerignore  Dockerfile  README.md  index.html  nginx.conf.template  package.json  pnpm-lock.yaml  vite.config.ts
front-end/src/: App.vue  main.ts  style.css
front-end/src/api/: files.ts  http.ts
front-end/src/components/: AdminNavigation.vue  AdminPanel.vue  AgentUpdatesPanel.vue  ConfirmModal.vue  CountryFlag.vue  EditInstanceModal.vue  FileManagerPanel.vue  InstanceBoard.vue  InstanceDetailModal.vue  LoginModal.vue  MetricHistoryChart.vue  OperatingSystemLogo.vue  RemoteDesktopModal.vue  SummaryBand.vue  TerminalModal.vue  TopBar.vue  UserManagementPanel.vue
front-end/src/composables/: useAppearance.ts  useMonitoringConsole.ts
front-end/src/data/: countries.ts
front-end/src/styles/: admin.css  base.css  controls.css  desktop.css  files.css  instances.css  layout.css  modals.css  responsive.css  transitions.css  updates.css
front-end/src/types/: domain.ts
front-end/src/utils/: appearance.ts  format.ts
instanceEnd/: Cargo.toml
instanceEnd/scripts/: build-standalone.cmd  build-standalone.ps1  build-standalone.sh
instanceEnd/scripts/xwin-tools/: llvm-lib
instanceEnd/src/: activity.rs  command.rs  config.rs  file_manager.rs  http.rs  identity.rs  install.rs  lifecycle.rs  logging.rs  main.rs  metrics.rs  models.rs  profile.rs  terminal.rs  time.rs  update.rs  ws.rs
instanceEnd/src/remote_desktop/: mod.rs  windows.rs
