[package]
name = "backend"
version = "0.1.0"
edition = "2024"

[dependencies]
aes-gcm = "0.10"
anyhow = "1.0"
axum = { version = "0.8", features = ["macros", "multipart", "ws"] }
base64 = "0.22"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4.5", features = ["derive", "env"] }
data-encoding = "2"
futures-util = "0.3"
hmac = "0.12"
rand = "0.8"
semver = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha1 = "0.10"
sha2 = "0.10"
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "sqlite"] }
subtle = "2"
tokio = { version = "1.48", features = ["full"] }
tokio-util = { version = "0.7", features = ["io"] }
tower-http = { version = "0.6", features = ["cors", "fs"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
urlencoding = "2"
uuid = { version = "1.18", features = ["serde", "v4"] }
