[package]
name = "instanceEnd"
version = "0.1.1"
edition = "2024"
rust-version = "1.89"

[[bin]]
name = "om-agent"
path = "src/main.rs"

[dependencies]
anyhow = "1.0"
base64 = "0.22"
clap = { version = "4.5", features = ["derive", "env"] }
directories = "6.0"
futures-util = "0.3"
fs2 = "0.4"
hostname = "0.4"
portable-pty = "0.9"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "stream"] }
semver = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
sysinfo = "0.30"
tokio = { version = "1.48", features = ["full"] }
tokio-tungstenite = { version = "0.29", features = ["rustls-tls-webpki-roots"] }
uuid = { version = "1.18", features = ["serde", "v4"] }

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[target.'cfg(windows)'.dependencies]
windows-service = "0.7"
windows = { version = "0.52", features = [
    "Win32_Foundation",
    "Win32_Graphics_Dxgi",
    "Win32_System_Performance",
    "Win32_System_Registry",
    "Win32_System_Threading",
    "Win32_UI_Shell",
    "Win32_UI_WindowsAndMessaging",
] }
windows-sys = { version = "0.61", features = [
    "Win32_Foundation",
    "Win32_Security",
    "Win32_System_Threading",
] }

[profile.release]
codegen-units = 1
lto = "thin"
panic = "abort"
strip = "symbols"
